June 2012
  - quick (un)lock for users
  - allow to disable tools
  - LAM Pro:
   -> Custom fields module allows to manage custom LDAP attributes in Self Service
   -> Separate group of names module for users allows to manage memberships if Unix module is not used (RFE 3504429)
   -> Named object module for groups (used for rfc2307bis schema)
  - fixed bugs
   -> Asterisk extensions with same name (3528288)


25.03.2012 3.7
  - Login: support bind user for login search
  - Personal: added labeledURI and cosmetic changes, description is now multi-valued (RFE 3446363)
  - Asterisk extensions: group extension entries by name and context
  - File upload:
   -> support custom scripts postCreate (LAM Pro)
   -> PDF export
  - New translation: Slovakian
  - removed phpGroupWare support (project no longer exists)
  - Use new password after self password change (RFE 3446350)
  - LAM Pro:
   -> Password self reset can send password confirmation and notification mails
   -> Zarafa archiver support
   -> Heimdal Kerberos support
  - Fixed bugs:
   -> DHCP: error message not displayed properly (3441975)
   -> Profile loading not possible if required fields are not filled (3444948)
   -> Tree view: unable to add object class (3446037)
   -> Edit page: unable to move accounts to different OU
   -> Self Service: support forced password changes (PPolicy) (3483907)
   -> XSS security patch (3496624)


23.11.2011 3.6.1
  - LAM Pro: fixed password reset function


22.11.2011 3.6
  - support HTTP authentication for admin pages and self service
  - new modules
   -> authorizedServiceObject
   -> FreeRadius
  - LAM Pro
   -> added password self reset feature
   -> Zarafa 7 support
   -> Zarafa support for dynamic groups, address lists and contacts
   -> Unix: group of names can be managed on user edit page
  - Fixed bugs:
   -> Unix: check for upper-case characters in user name (3416180)


09.08.2011 3.5.0
  - New modules: